--- a/form.html
+++ b/form.html
@@ -3,6 +3,8 @@
 <form>
 <h2>PSCMRCET STUDENT REGISTRATION FORM</h2>
 <label for="fname">Enter your first name</label><br>
+<input type="text" id="fname" value=" ">\
+ <label for="fname">Enter your second name name</label><br>
 <input type="text" id="fname" value=" ">
 </form>
 </body>
